# nrf91-at-client-rs

./: .gdbinit  Cargo.toml  README.md  TODO.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config
.github/workflows/: rust.yml
spm/: spm-1.5.1.elf
src/: heap.rs  kernel.rs  logging.rs  main.rs
