[package]
authors = ["Mattia Fiumara <mfiumara@protonmail.com>"]
edition = "2018"
readme = "README.md"
name = "rs-rtos"
version = "0.1.0"

[dependencies.async-std]
version = "1.7.0"
default-features = false
features = ["alloc"]
# async-std = { version = "1.12.0", default-features = false }

[dependencies.futures-lite]
version = "1.13.0"
default-features = false
features = ["alloc"]

[dependencies]
log = { version = "0.4.20", default-features = false }

# Uncomment for the panic example.
# panic-itm = "0.4.1"
panic-halt = "0.2.0"

# Uncomment for the allocator example.
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
alloc-cortex-m = "0.4.0"
rtt-target = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "rs-rtos"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
