[package]
authors = ["Mattia Fiumara <mfiumara@protonmail.com>"]
edition = "2018"
readme = "README.md"
name = "nrf91-at-client-rs"
version = "0.1.0"

[dependencies]
# Definitions used for our run-time and allocator
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6.10"
alloc-cortex-m = "0.4.0"
# embassy async-run-time
embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-interrupt", "executor-thread", "nightly"] }

# Logging related packages, should investigate if we can use defmt in stead
# log = { version = "0.4.20", default-features = false }
defmt = "0.3.2"
# defmt-rtt = "0.4.0"
defmt-rtt-target = "0.3.0"
rtt-target = "0.3.1"
panic-probe = "0.1.0"
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# Needed by rtt-target to provide thread-safe access to logging instance
critical-section = "1.1.2"

# Needed to talk to the nrf91 modem
nrf-modem = { version = "0.4.0", features = ["defmt"] }
nrfxlib-sys = { version = "2.1.0", features = ["arm-none-eabi-objcopy"] }
tinyrlibc = { version = "0.3.0" }

# HAL provided by Embassy
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features= ["nrf9160-ns"]}
# HAL that should not be required since we use embassy-nrf
nrf9160-hal = "0.16.0"

[[bin]]
name = "nrf91-at-client-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
